--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -8,3 +8,4 @@ $fa-font-path: "../fonts/font-awesome" !default;
 @import "~@fortawesome/fontawesome-free/scss/regular";
 @import "~@fortawesome/fontawesome-free/scss/solid";
 @import "~@fortawesome/fontawesome-free/scss/brands";
+@import "partials/common";
